--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.example.perpuleapptest.ui.auth.SignUpViewModel"
+            />
+
+    </data>
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,18 +22,28 @@
     android:paddingRight="24dp"
     android:background="@color/colorAccent"
     >
+
     <!-- Email Label -->
     <EditText android:id="@+id/input_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
+        android:text = "@{viewmodel.email}"
         android:hint="Email" />
     <!-- Password Label -->
     <EditText android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:text = "@{viewmodel.password}"
         android:hint="Password"/>
+    <!-- Confirm Password Label -->
+    <EditText android:id="@+id/confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:text = "@{viewmodel.confirm}"
+        android:hint="Confirm Password"/>
     <Button
         android:id="@+id/btn_login"
         android:layout_width="fill_parent"
@@ -30,12 +51,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="Login"/>
-    <TextView android:id="@+id/link_signup"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:text="No account yet? Create one"
-        android:gravity="center"
-        android:textSize="20sp"/>
+        android:onClick="@{viewmodel::home}"
+        android:text="Sign Up"/>
 </LinearLayout>
+
+</layout>
