--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="120dp"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
@@ -50,7 +50,7 @@
             android:text="No account yet? Create one"
             android:onClick="@{viewModel::tosignup}"
             android:gravity="center"
-            android:textSize="20sp"/>
+            android:textSize="12dp"/>
     </LinearLayout>
 
 
