--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:hint="Password"/>
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
+            android:layout0_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
